force-app/main/default/objects/Floor_Plan__c/fields/File_Location_Formula__c.field-meta.xml
<CustomField>
    <fullName>File_Location_Formula__c</fullName>
    <label>File Location Formula</label>
    <type>TextArea</type>
</CustomField>