force-app/main/default/objects/Floor_Plan__c/fields/File_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>File_Name_Formula__c</fullName>
    <label>File Name Formula</label>
    <type>TextArea</type>
</CustomField>