force-app/main/default/objects/Floor_Plan__c/fields/Floor_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Date__c</fullName>
    <label>Floor Plan Date</label>
    <type>Date</type>
</CustomField>