force-app/main/default/objects/Floor_Plan__c/fields/Floor_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Type__c</fullName>
    <label>Floor Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Scrubbed</fullName>
            </value>
            <value>
                <fullName>MA Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>