force-app/main/default/objects/Floor_Plan__c/fields/Suites__c.field-meta.xml
<CustomField>
    <fullName>Suites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suites</label>
    <referenceTo>Suites__c</referenceTo>
    <relationshipLabel>Floor Plans</relationshipLabel>
    <relationshipName>Floor_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>